# QtTCPChatApp

./: .gitignore  CMakeLists.txt
Client/QtChatClient/: CMakeLists.txt  chatclient.cpp  chatclient.h  clientwindow.cpp  clientwindow.h  main.cpp
Server/QtChatServer/: CMakeLists.txt  chatserver.cpp  chatserver.h  clientconnection.cpp  clientconnection.h  main.cpp  serverwindow.cpp  serverwindow.h
Shared/: chatmessage.cpp  chatmessage.h
